# discover-meister

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  cnpy-deployment.yaml  docker-compose.yml  package.json  pyproject.toml  readme.md  rollup.config.js  run.py  tasks.py
dmeister/: core.py  endpoints.py  health.py  models.py  security.py  services.py  validation.py
dmeister/dataaccess/: db.py  endpointda.py  serviceda.py
dmeister/static/: index.html  package.json  rollup.config.js
dmeister/static/src/: App.svelte  EndpointTable.svelte  Endpoints.svelte  Services.svelte
dmeister/static/src/common/: Empty.svelte  Loader.svelte  Logo.svelte
dmeister/static/src/common/icons/: death_star.svelte  lambda_shuttle.svelte  star_destroyer.svelte  tie_fighter.svelte  vader_tie.svelte
migrations/: env.py
migrations/versions/: 74b07841b893_initial.py  9d7502e48303_add_stripped_path_to_endpoints.py
tests/api/: test_api.py
tests/unit/: test_services.py
