[tool.poetry]
name = "dmeister"
version = "0.1.0"
description = ""
authors = ["Nick Humrich <nick.humrich@canopytax.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.11.4"
asyncpgsa = "^0.26.0"
sentry-sdk = "^0.7.7"
uvicorn = "^0.6.1"
aiofiles = "^0.4.0"
aioauth_client = "^0.16.0"
pyjwt = "^1.7"
itsdangerous = "^1.1"
invoke = "^1.2"
psycopg2 = "^2.7"
ujson = "^1.35"
sentry-asgi = "^0.1.5"
schedule = "^0.6.0"
alembic = "^1.0"
requests = "^2.21"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^4.4"
jmespath = "^0.9.4"
pytest-cov = "^2.6"


